// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SagaRunner race races an array of effects 1`] = `
Object {
  "payload": Object {
    "bart_simpson": "first",
  },
  "topic": "race-fast",
  "transaction_id": "static-transaction-id",
}
`;

exports[`SagaRunner race runs all of a record of effects 1`] = `
Object {
  "fast": Object {
    "payload": Object {
      "bart_simpson": "first",
    },
    "topic": "race-fast",
    "transaction_id": "static-transaction-id",
  },
  "slow": null,
}
`;
